--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Center an Image using text align center</title>
+    <title>Viola Mateira</title>
     <style>
       .img-container {
         text-align: center;
